Updated the layout for different sized screens
The layout for wider screens has been fixed, which in turn has also fixed some issues that were present on smaller screens. The width of the about text on the home page has also been fixed.

--- a/style_Boids.css
+++ b/style_Boids.css
@@ -6,10 +6,14 @@
 }
 html{
     scroll-behavior: smooth;
+    height: 100%;
+    width: 100%;
 }
 
 body{
     background: #212529;
+    height: 100%;
+    width: 100%;
 } 
 
 
@@ -72,13 +76,17 @@ nav ul li a:hover{
 
 .Intro{
     display: flex;
+    height: 100%;
+    width: 100%;
 }
 
 .Intro .Text{
-    margin: 17% 6%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .Text h1{
@@ -86,26 +94,24 @@ nav ul li a:hover{
     color: #eab72d;
 }
 
-.Text .line{
-    width: 70%;
-    height: 0px;
-    margin: auto 15%;
-    background: #eab72d;
-}
-
 .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .Intro .Video{
     display: flex;
+    justify-content: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
 .Video video{
-    margin: 30% 5%;
+    margin-right: 0%;
     width: 640px;
     height: 360px;
     cursor: pointer;
@@ -117,29 +123,41 @@ nav ul li a:hover{
 
 .FirstSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     background-color: #343a40;
 }
 
 .FirstSection .Text{
-    margin: 16% 7%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .FirstSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .FirstSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+
 }
 
 .FirstSection .Image img{
-    margin: 30% 5%;
+    margin-left: 0%;
     width: 640px;
     height: 360px;
 }
@@ -150,28 +168,40 @@ nav ul li a:hover{
 
 .SecondSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 .SecondSection .Text{
-    margin: 15% 6%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .SecondSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .SecondSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+
 }
 
 .SecondSection .Image img{
-    margin: 30% 5%;
+    margin-right: 0%;
     width: 640px;
     height: 360px;
 }
@@ -182,29 +212,40 @@ nav ul li a:hover{
 
 .ThirdSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     background-color: #343a40;
 }
 
 .ThirdSection .Text{
-    margin: 15% 7%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .ThirdSection .Text p{
     font-size: 20px;
-    padding: 0%;
-    margin: 15px auto;
+    padding: 1%;
     color: #f1faee;
 }
 
 .ThirdSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
 .ThirdSection .Image img{
-    margin: 30% 5%;
+    margin-left: 0%;
     width: 640px;
     height: 360px;
 }
@@ -215,28 +256,39 @@ nav ul li a:hover{
 
 .FourthSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 .FourthSection .Text{
-    margin: 17% 6%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .FourthSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .FourthSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
 .FourthSection .Image img{
-    margin: 30% 5%;
+    margin-right: 0%;
     width: 640px;
     height: 360px;
 }
@@ -247,29 +299,41 @@ nav ul li a:hover{
 
 .FifthSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     background-color: #343a40;
 }
 
 .FifthSection .Text{
-    margin: 15% 7%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .FifthSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
+    margin: auto auto;
     color: #f1faee;
 }
 
 .FifthSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
 .FifthSection .Image img{
-    margin: 30% 5%;
+    margin-left: 0%;
     width: 640px;
     height: 360px;
 }
@@ -280,33 +344,43 @@ nav ul li a:hover{
 
 .SixthSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 .SixthSection .Text{
-    margin: 10% 6%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .SixthSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .SixthSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
+
 .SixthSection .Image img{
-    margin: 30% 5%;
+    margin-right: 0%;
     width: 640px;
     height: 360px;
 }
-
-
 
 
 
@@ -382,42 +456,43 @@ nav ul li a:hover{
         cursor: pointer;
     }
 
-        /* ----- Titles and Text : Hover effects ----- */
+    /* ----- Titles and Text : Hover effects ----- */
 
-        nav ul li a::after{
-            content:'';
-            width: 0;
-            height:  3px;
-            background-color: #f1faee;
-            position: absolute;
-            left: 0;
-            bottom: -5px;
-            transition: 0.25s;
-        }
-        nav ul li a:hover::after{
+    nav ul li a::after{
+        content:'';
+        width: 0;
+        height:  3px;
+        background-color: #f1faee;
+        position: absolute;
+        left: 0;
+        bottom: -5px;
+        transition: 0.25s;
+    }
+    nav ul li a:hover::after{
             width: 100%;
-        }
-        nav ul li a:hover{
-            color: #f1faee;
-            transition: 0.25s;
-        }
+    }
+     nav ul li a:hover{
+        color: #f1faee;
+        transition: 0.25s;
+    }
 
-            /* ----- Sections ----- */
+    /* ----- Sections ----- */
 
     .Intro{
         display: grid;
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5px;
     }
         
     .Intro .Text{
-        margin-top: 25px;
         margin-bottom: 25px;
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .Text h1{
@@ -446,9 +521,9 @@ nav ul li a:hover{
         
     .Video video{
         margin-top: 5px;
-        margin-bottom: 25px;
-        width: 480px;
-        height: 240px;
+        margin-bottom: 15px;
+        width: 320px;
+        height: 180px;
         cursor: pointer;
     }
         
@@ -461,6 +536,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -471,10 +547,10 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .FirstSection .Text p{
-        margin-top: 5px;
         font-size: 18px;
         color: #f1faee;
         margin-left: auto;
@@ -484,16 +560,17 @@ nav ul li a:hover{
     }
         
     .FirstSection .Image{
+        margin-bottom: 1px;
         margin-left: auto;
         margin-right: auto;
         width: 100%;
     }
         
     .FirstSection .Image img{
-        margin-top: 35px;
-        margin-bottom: 0px;
-        width: 480px;
-        height: 240px;
+        margin-top: 25px;
+        margin-bottom: 1px;
+        width: 320px;
+        height: 180px;
     }
         
         
@@ -505,16 +582,18 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
         
     .SecondSection .Text{
-        margin-top: 35px;
-        margin-bottom: 25px;
+        margin-top: 25px;
+        margin-bottom: 10px;
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .SecondSection .Text p{
@@ -534,9 +613,9 @@ nav ul li a:hover{
         
     .SecondSection .Image img{
         margin-top: 5px;
-        margin-bottom: 35px;
-        width: 480px;
-        height: 240px;
+        margin-bottom: 25px;
+        width: 320px;
+        height: 180px;
     }
 
 
@@ -548,6 +627,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -558,6 +638,8 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
+
     }
         
     .ThirdSection .Text p{
@@ -576,10 +658,10 @@ nav ul li a:hover{
     }
         
     .ThirdSection .Image img{
-        margin-top: 35px;
-        margin-bottom: 1px;
-        width: 480px;
-        height: 240px;
+        margin-top: 25px;
+        margin-bottom: 5px;
+        width: 320px;
+        height: 180px;
     }
         
         
@@ -591,16 +673,18 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
         
     .FourthSection .Text{
-        margin-top: 35px;
-        margin-bottom: 25px;
+        margin-top: 25px;
+        margin-bottom: 15px;
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .FourthSection .Text p{
@@ -619,10 +703,10 @@ nav ul li a:hover{
     }
         
     .FourthSection .Image img{
-        margin-top: 1px;
+        margin-top: 5px;
         margin-bottom: 35px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
 
 
@@ -633,6 +717,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -643,6 +728,7 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .FifthSection .Text p{
@@ -661,10 +747,10 @@ nav ul li a:hover{
     }
         
     .FifthSection .Image img{
-        margin-top: 35px;
+        margin-top: 25px;
         margin-bottom: 1px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
         
         
@@ -676,16 +762,18 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
         
     .SixthSection .Text{
-        margin-top: 35px;
+        margin-top: 30px;
         margin-bottom: 25px;
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .SixthSection .Text p{
@@ -704,9 +792,9 @@ nav ul li a:hover{
     }
         
     .SixthSection .Image img{
-        margin-top: 1px;
+        margin-top: 5px;
         margin-bottom: 50px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
 }
