--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ nav ul li a:hover{
 .first-row{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
+    grid-gap: 5%;
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -148,7 +148,7 @@ nav ul li a:hover{
     align-items: center;
 }
 .about-text{
-    width: 800px;
+    width: 65%;
 }
 .main{
     width: 80%;
@@ -373,11 +373,17 @@ footer{
     /* ----- Titles and Text ----- */
 
     .projects-title{
-        top: 15px;
+        margin-top: 45px;
         font-size: 44px;
         text-align: center;
     }
+    .about-text{
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+    }
     .about-text h2{
+        margin-top: 45px;
         text-align: center;
         font-size: 44px;
     }
@@ -388,11 +394,14 @@ footer{
         margin-bottom: 25px;
     }
     .about-text p{
+        width: 100%;
         text-align: center;
         line-height: 22px;
         font-size: 16px;
+        margin-bottom: 15px;
     }
     .skills-section .title h2{
+        margin-top: 45px;
         color: #f1faee;
         font-size: 44px;
         text-align: center;
@@ -465,8 +474,8 @@ footer{
 
     .about-section{
         width: 100%;
-        height: 600px;
-        padding: 75px 0px;
+        height: auto;
+        padding: 25px 0px;
 
     }
 
