--- a/style_ThrowYourFriends.css
+++ b/style_ThrowYourFriends.css
@@ -5,11 +5,15 @@
     box-sizing: border-box
 }
 html{
+    height: 100%;
+    width: 100%;
     scroll-behavior: smooth;
 }
 
 body{
     background: #212529;
+    height: 100%;
+    width: 100%;
 } 
 
 
@@ -72,13 +76,17 @@ nav ul li a:hover{
 
 .Intro{
     display: flex;
+    height: 100%;
+    width: 100%;
 }
 
 .Intro .Text{
-    margin: 15% 6%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .Text h1{
@@ -86,26 +94,24 @@ nav ul li a:hover{
     color: #eab72d;
 }
 
-.Text .line{
-    width: 70%;
-    height: 0px;
-    margin: auto 15%;
-    background: #eab72d;
-}
-
 .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .Intro .Video{
     display: flex;
+    justify-content: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
 .Video img{
-    margin: 30% 5%;
+    margin-right: 0%;
     width: 640px;
     height: 360px;
     cursor: pointer;
@@ -117,29 +123,41 @@ nav ul li a:hover{
 
 .FirstSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     background-color: #343a40;
 }
 
 .FirstSection .Text{
-    margin: 15% 7%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .FirstSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .FirstSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+
 }
 
 .FirstSection .Image img{
-    margin: 30% 5%;
+    margin-left: 0%;
     width: 640px;
     height: 360px;
 }
@@ -150,28 +168,40 @@ nav ul li a:hover{
 
 .SecondSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 .SecondSection .Text{
-    margin: 16% 6%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .SecondSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .SecondSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+
 }
 
 .SecondSection .Image img{
-    margin: 30% 5%;
+    margin-right: 0%;
     width: 640px;
     height: 360px;
 }
@@ -182,29 +212,40 @@ nav ul li a:hover{
 
 .ThirdSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     background-color: #343a40;
 }
 
 .ThirdSection .Text{
-    margin: 15% 7%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .ThirdSection .Text p{
     font-size: 20px;
-    padding: 0%;
-    margin: 15px auto;
+    padding: 1%;
     color: #f1faee;
 }
 
 .ThirdSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
 .ThirdSection .Image img{
-    margin: 30% 5%;
+    margin-left: 0%;
     width: 640px;
     height: 360px;
 }
@@ -215,28 +256,39 @@ nav ul li a:hover{
 
 .FourthSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 .FourthSection .Text{
-    margin: 14% 6%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .FourthSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .FourthSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
 .FourthSection .Image img{
-    margin: 30% 5%;
+    margin-right: 0%;
     width: 640px;
     height: 360px;
 }
@@ -247,29 +299,41 @@ nav ul li a:hover{
 
 .FifthSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     background-color: #343a40;
 }
 
 .FifthSection .Text{
-    margin: 14% 7%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .FifthSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
+    margin: auto auto;
     color: #f1faee;
 }
 
 .FifthSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
 .FifthSection .Image img{
-    margin: 30% 5%;
+    margin-left: 0%;
     width: 640px;
     height: 360px;
 }
@@ -280,28 +344,40 @@ nav ul li a:hover{
 
 .SixthSection{
     display: flex;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 .SixthSection .Text{
-    margin: 17% 6%;
-    margin-right: 10px;
-    width: 45%;
-    align-items: center;
+    margin-left: 5%;
+    margin-right: 1%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
 }
 
 .SixthSection .Text p{
     font-size: 20px;
     padding: 0%;
-    margin: 15px auto;
     color: #f1faee;
 }
 
 .SixthSection .Image{
     display: flex;
+    justify-content: center;
+    margin-left: 1%;
+    margin-right: 5%;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 50%;
 }
 
+
 .SixthSection .Image img{
-    margin: 30% 5%;
+    margin-right: 0%;
     width: 640px;
     height: 360px;
 }
@@ -407,6 +483,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5px;
     }
         
@@ -415,6 +492,7 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .Text h1{
@@ -444,8 +522,8 @@ nav ul li a:hover{
     .Video img{
         margin-top: 5px;
         margin-bottom: 15px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
         cursor: pointer;
     }
         
@@ -458,6 +536,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -468,6 +547,7 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .FirstSection .Text p{
@@ -489,8 +569,8 @@ nav ul li a:hover{
     .FirstSection .Image img{
         margin-top: 25px;
         margin-bottom: 1px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
         
         
@@ -502,6 +582,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -512,6 +593,7 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .SecondSection .Text p{
@@ -532,8 +614,8 @@ nav ul li a:hover{
     .SecondSection .Image img{
         margin-top: 5px;
         margin-bottom: 25px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
 
 
@@ -545,6 +627,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -555,6 +638,8 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
+
     }
         
     .ThirdSection .Text p{
@@ -575,8 +660,8 @@ nav ul li a:hover{
     .ThirdSection .Image img{
         margin-top: 25px;
         margin-bottom: 5px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
         
         
@@ -588,6 +673,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -598,6 +684,7 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .FourthSection .Text p{
@@ -618,8 +705,8 @@ nav ul li a:hover{
     .FourthSection .Image img{
         margin-top: 5px;
         margin-bottom: 35px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
 
 
@@ -630,6 +717,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -640,6 +728,7 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .FifthSection .Text p{
@@ -660,8 +749,8 @@ nav ul li a:hover{
     .FifthSection .Image img{
         margin-top: 25px;
         margin-bottom: 1px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
         
         
@@ -673,6 +762,7 @@ nav ul li a:hover{
         display: inline-block;
         align-items: center;
         width: 100%;
+        height: auto;
         margin-top: 5%;
         background-color: #343a40;
     }
@@ -683,6 +773,7 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+        height: auto;
     }
         
     .SixthSection .Text p{
@@ -703,8 +794,8 @@ nav ul li a:hover{
     .SixthSection .Image img{
         margin-top: 5px;
         margin-bottom: 50px;
-        width: 480px;
-        height: 240px;
+        width: 320px;
+        height: 180px;
     }
 }
 
