--- a/style_ThrowYourFriends.css
+++ b/style_ThrowYourFriends.css
@@ -807,6 +807,20 @@ nav ul li a:hover{
 /*---------------css for large screens-------------*/
 
 @media (min-width: 1279px) {
+    .logo{
+        font-size: 60px;
+    }
+    nav ul li{
+        list-style: none;
+        display: inline-block;
+        padding: 50px 50px;
+    }
+    nav ul li a{
+        font-size: 32px;
+    }
+    
+
+
     .Text h1{
         font-size: 96px;
     }
