Added hyperlink for LinkedIn

--- a/style.css
+++ b/style.css
@@ -254,6 +254,10 @@ h5{
     color: #f1faee;
     font-size: 24px;
 }
+.contact-section a{
+    color: #f1faee;
+}
+
 
 footer{
     position: relative;
