--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav ul li a:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 150px;
+    padding-bottom: 25px;
 }
 .project{
     border-radius: 15px;
@@ -134,6 +134,37 @@ nav ul li a:hover{
 }
 
 .first-row img:hover{
+    transform:scale(1.1);
+}
+.project:hover .layer{
+    height: 100%;
+}
+
+.second-row{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 5%;
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 150px;
+}
+.project{
+    border-radius: 15px;
+    width: 384px;
+    height: 480px;
+    position: relative;
+    overflow: hidden;
+}
+.second-row img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    transition: 0.25s;
+}
+
+.second-row img:hover{
     transform:scale(1.1);
 }
 .project:hover .layer{
