--- a/style.css
+++ b/style.css
@@ -501,6 +501,25 @@ footer{
         overflow: hidden;
     }
 
+    .second-row{
+        margin-top: 150px;
+        display: grid;
+        align-items: center;
+        padding-bottom: 100px;
+    }
+    .project{
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        border-radius: 15px;
+        width: 288px;
+        height: 360px;
+        overflow: hidden;
+    }
+    
+
+    
+
     /* ----- About Section ----- */
 
     .about-section{
